app.css
body {
  background-color: #C9C9C9; 
  color: black;
}

/**/
#headerImg {
	width: 400;
	margin-bottom: 1em;
}


.ng-class {
	width: 20em;
}

/*inserts background image and positions it*/
header {
	min-height: 500px;
	background-position: center;	
	background-image: url("img/record-player.jpg");
	margin-bottom: 50px;
	background-repeat: no-repeat;
}

/*positions the logo*/
header img {
	margin-top: 180px;	
}

/*changes the color and positions of the span text stating that the user can click a song to preview*/
div.help-block {
	text-align: center;
	color: black;
}

/*Controls size of result images*/
.resultDiv img {
	min-height: 240px;
	max-width: 240px;
}

/*positions the divs containing result images*/
.resultDiv {
	display: inline-block;
	margin-right: auto;
	margin-left: auto;
	padding: 1%;
}

/*positions the selecteImages div where each result div/image shows up*/
#selectImages {
	padding: 1%;
	display: block;
	margin-right: 0 auto;
	margin-left: 0 auto;
	text-align: center;
}

/*positions the pause music button in bottom right of screen*/
.fixedBtn {
	position: fixed;
	z-index: 101;
	right: 2%;
	bottom: 3%;
}

/*positions the album art image in the popup*/
img.popupAlbum {
	width: 80%;
	height: 80%;
}

/*positions the line in the popup*/
.modal-body hr {
	width: 50%;
	margin-bottom: 8px;
}

/*positions the instagram icon in the popup*/
#instaIcon {
	width: 25px;
	height: 25px;
}


/*padding and positioning on the image results from instagram*/
img.instaImage {
	width: 200px;
	border: solid 1px;
}


/*When the screen is smaller than 768px (for smartphones), change the image sizes of the popups*/
@media screen and (max-width: 768px) {
	img.popupAlbum {
		margin-left: auto;
		margin-right: auto;
		width: 80%;
		height: 80%;
	}

	img.instaImage {
		width:200px;
	}
}

/*aligns the additional info in the modal*/
.additionalInfo {
	text-align: center;
}

